[gd_scene load_steps=9 format=2]

[ext_resource path="res://Imagens/Minigame1 (1).png" type="Texture" id=1]
[ext_resource path="res://Imagens/n_4.png" type="Texture" id=2]
[ext_resource path="res://Imagens/n_9.png" type="Texture" id=3]
[ext_resource path="res://Imagens/img_pixelGoat.png" type="Texture" id=4]
[ext_resource path="res://Minigame1.gd" type="Script" id=5]
[ext_resource path="res://Imagens/seta-para-baixo.png" type="Texture" id=6]
[ext_resource path="res://KinematicBody2D.gd" type="Script" id=7]

[sub_resource type="CapsuleShape2D" id=1]
radius = 23.0
height = 16.0

[node name="Node2D" type="Node2D"]
script = ExtResource( 5 )

[node name="map_minigame" type="Sprite" parent="."]
position = Vector2( 200, 400 )
texture = ExtResource( 1 )

[node name="N4" type="Sprite" parent="."]
position = Vector2( 51, 253 )
texture = ExtResource( 2 )

[node name="N9" type="Sprite" parent="."]
position = Vector2( 349, 243 )
texture = ExtResource( 3 )

[node name="ColorRect" type="ColorRect" parent="."]
margin_left = -332.0
margin_top = 35.0
margin_right = -20.0
margin_bottom = 168.0
color = Color( 0.121569, 0.145098, 0.682353, 0.45098 )

[node name="Button" type="Button" parent="."]
modulate = Color( 0.364706, 0.054902, 0.984314, 1 )
margin_left = 354.0
margin_top = 330.0
margin_right = 374.0
margin_bottom = 389.0
rect_scale = Vector2( 3, 3 )
text = ">"
flat = true

[node name="Button2" type="Button" parent="."]
modulate = Color( 0.364706, 0.054902, 0.984314, 1 )
margin_left = 43.0
margin_top = 497.0
margin_right = 63.0
margin_bottom = 556.0
rect_rotation = 180.0
rect_scale = Vector2( 3, 3 )
text = ">"
flat = true

[node name="WindowDialog" type="WindowDialog" parent="."]
visible = true
margin_left = 55.0
margin_top = 67.0
margin_right = 349.0
margin_bottom = 174.0
custom_colors/title_color = Color( 0, 0, 0, 1 )
window_title = "Pergunta"

[node name="RichTextLabel" type="RichTextLabel" parent="WindowDialog"]
modulate = Color( 0.0784314, 0.054902, 0.054902, 1 )
margin_left = 11.0
margin_top = 13.0
margin_right = 280.0
margin_bottom = 100.0

[node name="HBoxContainer" type="HBoxContainer" parent="."]
margin_left = 15.0
margin_top = 718.0
margin_right = 386.0
margin_bottom = 788.0

[node name="Left" type="TouchScreenButton" parent="HBoxContainer"]
position = Vector2( 73, -2 )
rotation = 1.5708
scale = Vector2( 0.121094, 0.121094 )
normal = ExtResource( 6 )

[node name="Down" type="TouchScreenButton" parent="HBoxContainer"]
position = Vector2( 109, 4 )
scale = Vector2( 0.121094, 0.121094 )
normal = ExtResource( 6 )

[node name="Right" type="TouchScreenButton" parent="HBoxContainer"]
position = Vector2( 298, 71 )
rotation = 4.71239
scale = Vector2( 0.121094, 0.121094 )
normal = ExtResource( 6 )

[node name="Up" type="TouchScreenButton" parent="HBoxContainer"]
position = Vector2( 264, 64 )
rotation = 3.14159
scale = Vector2( 0.121094, 0.121094 )
normal = ExtResource( 6 )

[node name="KinematicBody2D" type="KinematicBody2D" parent="."]
position = Vector2( 87, 638 )
script = ExtResource( 7 )
__meta__ = {
"_edit_group_": true
}

[node name="ImgPersonagem" type="Sprite" parent="KinematicBody2D"]
position = Vector2( 0.187502, -1.34262 )
scale = Vector2( 0.186245, 0.186245 )
texture = ExtResource( 4 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="KinematicBody2D"]
position = Vector2( 0.187502, 0.657381 )
shape = SubResource( 1 )

[node name="bRun" type="Button" parent="."]
margin_left = 14.0
margin_top = 23.0
margin_right = 57.0
margin_bottom = 43.0
text = "jogar"

[connection signal="pressed" from="Button" to="." method="_on_Button_pressed"]
[connection signal="pressed" from="Button2" to="." method="_on_Button2_pressed"]
[connection signal="pressed" from="HBoxContainer/Left" to="." method="_on_Left_pressed"]
[connection signal="pressed" from="HBoxContainer/Down" to="." method="_on_Down_pressed"]
[connection signal="pressed" from="HBoxContainer/Right" to="." method="_on_Right_pressed"]
[connection signal="pressed" from="HBoxContainer/Up" to="." method="_on_Up_pressed"]
[connection signal="pressed" from="bRun" to="." method="_on_bRun_pressed"]
